--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
   <title>Пример веб-страницы</title>
  </head>
  <body>
-  <h1>Заголовок</h1>
-  <!-- Комментарий -->
-  <p>Первый абзац.</p>
-  <p>Второй абзац.</p>
+ 	<form action="https://solvecorporation.github.io/GameBird/" target="_blank">
+   <button>Переход по ссылке</button>
+  	</form>
  </body>
 </html>
