--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
   <title>Пример веб-страницы</title>
  </head>
  <body>
- 	<form action="https://solvecorporation.github.io/GameBird/" target="_blank">
-   <button>Переход по ссылке</button>
-  	</form>
+ 	<button onclick="window.location.href = 'https://solvecorporation.github.io/GameBird/';">Game</button>
  </body>
 </html>
