--- a/index.html
+++ b/index.html
@@ -1,10 +1,25 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html>
- <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <title>Пример веб-страницы</title>
- </head>
- <body>
- 	<button onclick="window.location.href = 'https://solvecorporation.github.io/GameBird/';">Game</button>
- </body>
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="css/style.css">
+	<script src='js/script.js'></script>
+	<title>Solve Service</title>
+</head>
+<body>
+
+	<center><h1 id='TextSolve'>Solve Service</h1></center>
+	<center><div id='CentralDiv'>
+		
+		<center>
+		<img src="https://cdn.icon-icons.com/icons2/836/PNG/128/Google_icon-icons.com_66793.png" onclick="OnClickApplication('https://Google.com')" class='Application'><img src="https://cdn.icon-icons.com/icons2/567/PNG/128/store_icon-icons.com_54371.png" onclick="OnClickApplication('https://m.aliexpress.ru/')" class='Application'>
+		</center>
+
+		
+	
+	</div></center>
+
+
+</body>
 </html>
